fixed syntax for injecting jwt values

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,7 @@ spring.mail.username=${LOCAL_MAIL_USERNAME}
 spring.mail.password=${LOCAL_MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+jwt.secret.string=${JWT_SECRET}
+jwt.expiration.time=${JWT_EXPIRATION_TIME}
